--- a/.github/workflows/synctest1.yml
+++ b/.github/workflows/synctest1.yml
@@ -13,7 +13,6 @@ jobs:
     steps:
       - uses: tgymnich/fork-sync@v1.8
         with:
-          token: ${{ secrets.PERSONAL_TOKEN }}
-          owner: llvm
+          owner: ElWizardo
           base: master
           head: master
